# linux_software_tools_notes

CS_SOURCE/: github_src.md
awesome/: awesome_hot_keys.md
cmake/: cmake_details.md  learningcmake.md
cmake/cmake-demo/Demo4/: CMakeLists.txt
cmake/cmake-demo/Demo5/: CMakeLists.txt
cmake/cmake-demo/Demo6/: CMakeLists.txt
cmake/cmake-tutorial/: Tutorial.rar
cmake/cmake_example/stm32-project/STM32F4_FreeRTOS_Blinky-concentrate/: CMakeLists.txt  config.h.in
cmake/cmake_example/stm32-project/STM32F4_FreeRTOS_Blinky-concentrate/Drivers/: CMakeLists.txt
cmake/cmake_example/stm32-project/STM32F4_FreeRTOS_Blinky-concentrate/FreeRTOS/: CMakeLists.txt
cmake/cmake_example/stm32-project/STM32F4_FreeRTOS_Blinky-concentrate/User/Source/: main.c
cmake/cmake_example/stm32-project/STM32F4_FreeRTOS_Blinky-concentrate/config/: config.h
cmake/cmake_example/stm32-project/STM32F4_FreeRTOS_Blinky-dispersion/: CMakeLists.txt
cmake/cmake_example/usual-c/creat-lib/: CMakeLists.txt  README  clean_and_make.sh  runhello.sh
cmake/cmake_example/usual-c/creat-lib/lib/: CMakeLists.txt  hello.c
cmake/cmake_example/usual-c/creat-lib/src/: CMakeLists.txt
cmake/cmake_example/usual-c/use-lib/: CMakeLists.txt
cmake/cmake_example/usual-c/use-lib/src/: CMakeLists.txt
cmake/mycmake/: CMakeLists.txt
cpp/: cplusplus_software.md
doxygen/: softwareinstall.md
gdb/: gdb.md
git_cmd_notes/: git_branch.txt  git_ssh.md  learn_git.md
linux_cmd_notes/: 1. find 文件查找  2. 文件文件夹创建、复制、剪切、删除、重命名
linux_system/: directory_file.md  file_folder_operate.md  file_zip_unzip.md  find_file.md  linux_log.md  user_file_authority_manage.md
make/: makefile.md
makefile_cmd_notes/: 1-introduction.md  2-makefile_rules.md
makefile_cmd_notes/firmware/: Makefile
makefile_cmd_notes/firmware/inc/: add.h
makefile_cmd_notes/firmware/src/: add.cpp  main.cpp
markdown/: markdowm.md
oh-my-zsh/: install.md  zshrc  zshrc~
point/: thinkcoding.md
python/: pyIDEforSublime.md  python_notes.md
ros/: learningRosForRoboticsProgramming_notes.md  ros_basic.md  ros_midlevel.md  ros_serial.md  ros_user.md
shell/: auto_boot.md
shiyanlou/gdb/: gdb.md
shiyanlou/linux 基础/: process.md  regex.md  software-install.md  text-handle.txt  环境变量与文件查找.md
shiyanlou/linux_system/: data_flow.txt  grep_wc_sort.txt  process_manage.md
shiyanlou/ros/: ros_basic.md
shiyanlou/vim/: vim.md
sublime_hotkey_notes/: hotkey.md  input_chinese.md  sublime_highlight.sh
tmux/: tmux.conf
ubuntu_os_error_solve_notes/: arm-dev-on-ubuntu.txt  grub_rescue.txt  sources.list  ubuntu_os_error_solve.md  ubuntu_tools_operate.md
